# fix_price_scrapy

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  fix_price.json  pyproject.toml  scrapy.cfg
fix_price_scrapy/: items.py  middlewares.py  pipelines.py  settings.py
fix_price_scrapy/spiders/: fix_price.py
