[tool.poetry]
name = "fix-price-scrapy"
version = "0.1.0"
description = ""
authors = ["NASTY-SMIT <nasty.smit.2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.1"
scrapy-splash = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
